--- a/main.html
+++ b/main.html
@@ -1,16 +1,110 @@
 <!DOCTYPE html>
 
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <title>MyBookList</title>
 
+  <!-- Bootstrap CDN -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+
+  <style>
+    h1 span {
+      color: #007bff;
+    }
+
+    .delete {
+      background-color: #dc3545;
+      color: #fff;
+      border: none;
+      padding: 2px 8px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="container mt-4">
+    <!-- Heading -->
+    <h1 class="text-center">
+      My<span>Book</span>List
+    </h1>
+
+    <!-- Form -->
+    <div class="form-group">
+      <label>Title</label>
+      <input type="text" id="title" class="form-control">
+
+      <label class="mt-2">Author</label>
+      <input type="text" id="author" class="form-control">
+
+      <label class="mt-2">ISBN#</label>
+      <input type="text" id="isbn" class="form-control">
+
+      <button id="submit" class="btn btn-primary mt-3">
+        Add Book
+      </button>
+    </div>
+
+    <!-- Table -->
+    <table class="table table-striped mt-4">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>ISBN#</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody id="book-list">
+        <!-- Rows added dynamically -->
+      </tbody>
+    </table>
+  </div>
+
+  <script>
+    document.getElementById("submit").addEventListener("click", function () {
+      const title = document.getElementById("title").value.trim();
+      const author = document.getElementById("author").value.trim();
+      const isbn = document.getElementById("isbn").value.trim();
+
+      if (title === "" || author === "" || isbn === "") {
+        alert("Please fill all fields");
+        return;
+      }
+
+      const bookList = document.getElementById("book-list");
+
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${title}</td>
+        <td>${author}</td>
+        <td>${isbn}</td>
+        <td>
+          <button class="delete">X</button>
+        </td>
+      `;
+
+      bookList.appendChild(row);
+
+      // Clear inputs
+      document.getElementById("title").value = "";
+      document.getElementById("author").value = "";
+      document.getElementById("isbn").value = "";
+    });
+
+    // Delete row
+    document.getElementById("book-list").addEventListener("click", function (e) {
+      if (e.target.classList.contains("delete")) {
+        e.target.closest("tr").remove();
+      }
+    });
+  </script>
 
 </body>
-
 </html>
